--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react": "16.3.1",
     "react-native": "~0.55.2",
     "react-native-dropdown-menu": "^2.0.0",
+    "react-native-elements": "^0.19.1",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-modal-dropdown": "^0.6.2",
+    "react-native-swipeout": "^2.3.6",
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
