--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "firebase": "^5.3.1",
     "react": "16.3.1",
     "react-native": "~0.55.2",
+    "react-native-dialog-input": "^1.0.4",
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-elements": "^0.19.1",
+    "react-native-ionicons": "^0.2.2",
     "react-native-keyboard-aware-scroll-view": "^0.6.0",
     "react-native-modal-dropdown": "^0.6.2",
     "react-native-swipeout": "^2.3.6",
+    "react-native-vector-icons": "^5.0.0",
     "react-navigation": "^2.9.3",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
